@@ -6,21 +6,20 @@ import fr.inra.oresing.domain.data.*;
 
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
 
 public abstract class ManyValuesStaticColumn extends Column {
 
     public static final String CSV_CELL_SEPARATOR = ",";
 
     public ManyValuesStaticColumn(final DataColumn referenceColumn, final String headerForColumnn, final ComponentPresenceConstraint presenceConstraint, final ComputedValueUsage computedValueUsage) {
-        super(referenceColumn, headerForColumnn, presenceConstraint, computedValueUsage);
+        super(referenceColumn, presenceConstraint, computedValueUsage);
     }
 
     @Override
     public void pushValue(final String cellContent, final DataDatum referenceDatum, final Map<String, Map<String, RefsLinkedToValue>> refsLinkedTo) {
         final List<String> values = Splitter.on(CSV_CELL_SEPARATOR)
                 .splitToStream(cellContent)
-                .collect(Collectors.toList());
+                .toList();
         final DataColumnValue referenceColumnValue = new DataColumnMultipleValue(values);
         referenceDatum.put(getReferenceColumn(), referenceColumnValue);
     }
