@@ -6,9 +6,9 @@ import lombok.Value;
 
 import java.util.Arrays;
 import java.util.List;
-import java.util.stream.Collectors;
+
 @Value
-@EqualsAndHashCode(callSuper=false)
+@EqualsAndHashCode(callSuper = false)
 public class BadLabelNameException extends OreSiTechnicalException {
     /**
      * Le nom de l'application doit commencer par un caractère minuscule et ne contenir que des lettres minuscules, des chiffres ou le caractère souligné.
@@ -17,14 +17,15 @@ public class BadLabelNameException extends OreSiTechnicalException {
     private static String BAD_LABEL_NAME = "BAD_LABEL_NAME";
     List<String> args;
     LabelType labelType;
+
     public BadLabelNameException(final LabelType labelType, final String name, final String... args) {
         super(name);
         this.labelType = labelType;
-        this.args =Arrays.stream(args).collect(Collectors.toList());
+        this.args = Arrays.stream(args).toList();
     }
 
 
-    public enum LabelType{
+    public enum LabelType {
         APPLICATION,
         DATATYPE,
         REFERENCE
