@@ -1,21 +1,15 @@
 package fr.inra.oresing.domain.groovy.predefined.script;
 
-import com.google.common.base.Strings;
-import fr.inra.oresing.domain.application.configuration.Ltree;
 import groovy.lang.Closure;
 
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.List;
 import java.util.Map;
-import java.util.function.Function;
-import java.util.stream.Collectors;
 
 public record BuildManyCompositeKey() implements ScriptConstantProvider {
     @Override
     public void bindToContext(Map<String, Object> context) {
-        Function<String, String> nullOrEmptyToNull = partialKey -> Strings.isNullOrEmpty(partialKey) ? Ltree.NULL_KEY : partialKey;
-
         Closure<String> buildManyCompositeKey = new Closure<String>(this) {
             public String doCall(List<String> labels) {
                 Map<String, String> datum = (Map<String, String>) context.get("datum");
@@ -43,7 +37,7 @@ public record BuildManyCompositeKey() implements ScriptConstantProvider {
                     List<String> valuesAtIndex = valuesList.stream()
                             .map(values -> index < values.size() ? values.get(index) : "")
                             .map(String::trim)
-                            .collect(Collectors.toList());
+                            .toList();
                     String compositeKey = BuildCompositeKey.buildNaturelKeyFromLabels(valuesAtIndex);
                     compositeKeys.add(compositeKey);
                 }
