@@ -4,15 +4,17 @@ import com.fasterxml.jackson.databind.ObjectMapper;
 import jakarta.annotation.PostConstruct;
 import jakarta.xml.bind.DatatypeConverter;
 import lombok.extern.java.Log;
-import org.apache.http.HttpEntity;
-import org.apache.http.client.CookieStore;
-import org.apache.http.client.methods.*;
-import org.apache.http.impl.client.BasicCookieStore;
-import org.apache.http.impl.client.CloseableHttpClient;
-import org.apache.http.impl.client.HttpClientBuilder;
-import org.apache.http.entity.ByteArrayEntity;
-import org.apache.http.entity.StringEntity;
-import org.apache.http.util.EntityUtils;
+import org.apache.hc.client5.http.classic.methods.*;
+import org.apache.hc.client5.http.cookie.BasicCookieStore;
+import org.apache.hc.client5.http.cookie.CookieStore;
+import org.apache.hc.client5.http.impl.classic.CloseableHttpClient;
+import org.apache.hc.client5.http.impl.classic.CloseableHttpResponse;
+import org.apache.hc.client5.http.impl.classic.HttpClients;
+import org.apache.hc.core5.http.ContentType;
+import org.apache.hc.core5.http.HttpEntity;
+import org.apache.hc.core5.http.io.entity.ByteArrayEntity;
+import org.apache.hc.core5.http.io.entity.EntityUtils;
+import org.apache.hc.core5.http.io.entity.StringEntity;
 import org.json.JSONArray;
 import org.json.JSONObject;
 import org.springframework.beans.factory.annotation.Value;
@@ -20,7 +22,7 @@ import org.springframework.stereotype.Repository;
 
 import javax.crypto.Mac;
 import javax.crypto.spec.SecretKeySpec;
-import java.io.*;
+import java.io.InputStream;
 import java.net.URL;
 import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
@@ -41,28 +43,43 @@ import java.util.concurrent.Executors;
 @Log
 public class FileSenderRepository implements fr.inra.oresing.rest.filesenderclient.FileRepository {
     public static final int DEFAULT_TRANSFER_DAYS_VALID = 2;
-
-    private final ExecutorService executorService = Executors.newFixedThreadPool(5);
-
     private static final int UPLOAD_CHUNK_SIZE =
             5242880; // https://filesender.renater.fr/rest.php/info
     private static final int NUMBER_OF_DAYS_BEFORE_EXPIRATION = 15;
+    private static CookieStore cookieStore;
   
   /*private static final Gson gson =
       new GsonBuilder()
           .setFieldNamingPolicy(FieldNamingPolicy.LOWER_CASE_WITH_UNDERSCORES)
           .create();*/
-
+    private final ExecutorService executorService = Executors.newFixedThreadPool(5);
     @Value("${filesender.baseurl}")
     private String BASE_URL;
-
     @Value("${filesender.username}")
     private String USERNAME;
-
     @Value("${filesender.apikey}")
     private String APIKEY;
     private int uploadChunkSize = -1;
-    private static CookieStore cookieStore;
+
+    private static String sanitizeFileName(String input) {
+        // Remplacer les caractères interdits par un tiret bas
+        return input.replaceAll("[\\\\/:*?\"<>|]", "_");
+    }
+
+    private static byte[] concatByteArrays(byte[] first, byte[] second) {
+        byte[] combined = new byte[first.length + second.length];
+        System.arraycopy(first, 0, combined, 0, first.length);
+        System.arraycopy(second, 0, combined, first.length, second.length);
+        return combined;
+    }
+
+    private static String bytesToHex(byte[] hashBytes) {
+        StringBuilder sb = new StringBuilder();
+        for (byte b : hashBytes) {
+            sb.append(String.format("%02x", b));
+        }
+        return sb.toString();
+    }
 
     @PostConstruct
     public void init() {
@@ -73,11 +90,10 @@ public class FileSenderRepository implements fr.inra.oresing.rest.filesenderclie
         try {
             JSONObject info = call("get", "/info", new HashMap<>(), null, null, new HashMap<>());
             return info.getInt("upload_chunk_size");
-        }catch (Exception e){
+        } catch (Exception e) {
             return -1;
         }
     }
-
 
     @Override
     public String postTransfer(FileInfos fileInfos) throws Exception {
@@ -133,15 +149,10 @@ public class FileSenderRepository implements fr.inra.oresing.rest.filesenderclie
     }
 
     private int getChunkSize() {
-        if(uploadChunkSize <0){
+        if (uploadChunkSize < 0) {
             uploadChunkSize = getUploadChunkSize();
         }
         return uploadChunkSize;
-    }
-
-    private static String sanitizeFileName(String input) {
-        // Remplacer les caractères interdits par un tiret bas
-        return input.replaceAll("[\\\\/:*?\"<>|]", "_");
     }
 
     private JSONObject postTransfer(String userId, String from, JSONArray files, String recipient, String subject, String message, Long expires, JSONObject options) throws Exception {
@@ -175,7 +186,6 @@ public class FileSenderRepository implements fr.inra.oresing.rest.filesenderclie
 
         return call("post", "/transfer", params, content, null, new HashMap<>());
     }
-
 
     private void putChunk(JSONObject file, byte[] chunk, long offset) throws Exception {
         Map<String, String> params = new HashMap<>();
@@ -217,7 +227,7 @@ public class FileSenderRepository implements fr.inra.oresing.rest.filesenderclie
         call("put", "/transfer/" + transfer.getInt("id"), params, content, null, new HashMap<>());
     }
 
-    private JSONObject call(String method, String path, Map<String, String> params, JSONObject content, byte[] rawContent, Map<String, String> headers) throws Exception {
+    public JSONObject call(String method, String path, Map<String, String> params, JSONObject content, byte[] rawContent, Map<String, String> headers) throws Exception {
         params.put("remote_user", USERNAME);
         params.put("timestamp", String.valueOf(Math.round(System.currentTimeMillis() / 1000.0)));
 
@@ -228,35 +238,39 @@ public class FileSenderRepository implements fr.inra.oresing.rest.filesenderclie
 
         log.info("URL: %s%n Signature: %s".formatted(url, signature));
 
-        try (CloseableHttpClient client = HttpClientBuilder.create().setDefaultCookieStore(cookieStore).build()) {
-            HttpRequestBase request = switch (method.toLowerCase()) {
-                case "get" -> new HttpGet(url);
-                case "post" -> new HttpPost(url);
-                case "put" -> new HttpPut(url);
-                case "delete" -> new HttpDelete(url);
+        try (CloseableHttpClient client = HttpClients.custom().setDefaultCookieStore(cookieStore).build()) {
+            HttpUriRequest request;
+
+            switch (method.toLowerCase()) {
+                case "get" -> request = new HttpGet(url);
+                case "post" -> request = new HttpPost(url);
+                case "put" -> request = new HttpPut(url);
+                case "delete" -> request = new HttpDelete(url);
                 default -> throw new IllegalArgumentException("Méthode HTTP non supportée: " + method);
-            };
+            }
 
             request.setHeader("Accept", "application/json");
             request.setHeader("Content-Type", headers.getOrDefault("Content-Type", "application/json"));
 
+            // Set custom headers
             for (Map.Entry<String, String> header : headers.entrySet()) {
                 request.setHeader(header.getKey(), header.getValue());
             }
 
+            // Ajouter le contenu à la requête, si présent
             if (content != null) {
-                assert request instanceof HttpEntityEnclosingRequestBase;
-                ((HttpEntityEnclosingRequestBase) request).setEntity(new StringEntity(content.toString(), StandardCharsets.UTF_8));
+                ((HttpUriRequestBase) request).setEntity(new StringEntity(content.toString(), StandardCharsets.UTF_8));
             } else if (rawContent != null) {
-                assert request instanceof HttpEntityEnclosingRequestBase;
-                ((HttpEntityEnclosingRequestBase) request).setEntity(new ByteArrayEntity(rawContent));
+                // Utilisation de ContentType pour spécifier le type des données
+                ((HttpUriRequestBase) request).setEntity(new ByteArrayEntity(rawContent, ContentType.APPLICATION_OCTET_STREAM));
             }
 
+            // Exécution de la requête
             try (CloseableHttpResponse response = client.execute(request)) {
                 HttpEntity entity = response.getEntity();
                 String responseBody = EntityUtils.toString(entity);
 
-                int statusCode = response.getStatusLine().getStatusCode();
+                int statusCode = response.getCode();  // Utilise response.getCode() au lieu de getStatusLine().getStatusCode()
                 if (statusCode != 200 && (method.equals("post") && statusCode != 201)) {
                     throw new Exception("Erreur HTTP " + statusCode + ": " + responseBody);
                 }
@@ -279,14 +293,6 @@ public class FileSenderRepository implements fr.inra.oresing.rest.filesenderclie
         }
         Collections.sort(flatParams);
         return String.join("&", flatParams);
-    }
-
-
-    private static byte[] concatByteArrays(byte[] first, byte[] second) {
-        byte[] combined = new byte[first.length + second.length];
-        System.arraycopy(first, 0, combined, 0, first.length);
-        System.arraycopy(second, 0, combined, first.length, second.length);
-        return combined;
     }
 
     private String generateSignature(String method, String path, Map<String, String> params,
@@ -334,7 +340,7 @@ public class FileSenderRepository implements fr.inra.oresing.rest.filesenderclie
 
         String flatParams = String.join("&", copyOfParams.entrySet().stream()
                 .map(e -> e.getKey() + "=" + e.getValue())
-                .collect(Collectors.toList()));
+                .toList());
 
         String baseUrlWithoutProtocol = BASE_URL.replaceFirst("https?://", "");
         String signedString = String.format("%s&%s%s%s%s",
@@ -356,13 +362,5 @@ public class FileSenderRepository implements fr.inra.oresing.rest.filesenderclie
 
         byte[] hashBytes = mac.doFinal(signedString.getBytes(StandardCharsets.US_ASCII));
         return bytesToHex(hashBytes);*/
-    }
-
-    private static String bytesToHex(byte[] hashBytes) {
-        StringBuilder sb = new StringBuilder();
-        for (byte b : hashBytes) {
-            sb.append(String.format("%02x", b));
-        }
-        return sb.toString();
     }
 }
