@@ -1,10 +1,10 @@
 package fr.inra.oresing.rest.services;
 
 import com.google.common.collect.Lists;
-import fr.inra.oresing.domain.data.DataColumn;
 import fr.inra.oresing.domain.application.Application;
-import fr.inra.oresing.persistence.*;
+import fr.inra.oresing.domain.data.DataColumn;
 import fr.inra.oresing.domain.repository.authorization.role.OreSiRightOnApplicationRole;
+import fr.inra.oresing.persistence.*;
 import fr.inra.oresing.rest.ViewStrategy;
 import fr.inra.oresing.rest.exceptions.views.FieldNameTooLongForSqlFieldException;
 import lombok.extern.slf4j.Slf4j;
@@ -12,7 +12,6 @@ import org.apache.commons.collections4.CollectionUtils;
 import org.apache.logging.log4j.util.Strings;
 import org.springframework.beans.factory.DisposableBean;
 import org.springframework.beans.factory.InitializingBean;
-import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.jdbc.core.namedparam.NamedParameterJdbcTemplate;
 import org.springframework.stereotype.Component;
@@ -27,16 +26,25 @@ import java.util.stream.Collectors;
 @Slf4j
 @Component
 @Transactional()
-public class RelationalService implements ServiceContainerBean, InitializingBean, DisposableBean {
+public class RelationalService implements InitializingBean, DisposableBean {
     private static final String IDENTIFIER_PATTERN = "[a-z][a-z_0-9]{%d,%d}";
-    @Autowired
-    private SqlService db;
-    @Autowired
-    private NamedParameterJdbcTemplate namedParameterJdbcTemplate;
-    @Autowired
-    private OreSiRepository repository;
+    private final SqlService db;
+    private final NamedParameterJdbcTemplate namedParameterJdbcTemplate;
+    private final OreSiRepository repository;
+    private final ServiceContainer serviceContainer;
     @Value("${viewStrategy:DISABLED}")
     private ViewStrategy viewStrategy;
+
+    public RelationalService(
+            SqlService db,
+            NamedParameterJdbcTemplate namedParameterJdbcTemplate,
+            OreSiRepository repository,
+            ServiceContainer serviceContainer) {
+        this.db = db;
+        this.namedParameterJdbcTemplate = namedParameterJdbcTemplate;
+        this.repository = repository;
+        this.serviceContainer = serviceContainer;
+    }
 
     public static Predicate<String> getIsValidIdentifierPattern(int min, int max) {
         int min1 = min > 0 ? min : 1;
@@ -347,11 +355,6 @@ public class RelationalService implements ServiceContainerBean, InitializingBean
         db.dropSchema(schema);
     }
 
-    @Override
-    public void setServiceContainer(ServiceContainer serviceContainer) {
-
-    }
-
 
     sealed interface SQLVariable permits SQLVariableForData, SQLVariableForRefsLinkedTo {
         String name();
@@ -424,7 +427,8 @@ public class RelationalService implements ServiceContainerBean, InitializingBean
                             sqlComponents()
                                     .stream()
                                     .map(sqlComponent -> switch (this) {
-                                        case final SQLVariableForData sqlVariableForData -> sqlComponent.toRecordDefinition();
+                                        case final SQLVariableForData sqlVariableForData ->
+                                                sqlComponent.toRecordDefinition();
                                         case final SQLVariableForRefsLinkedTo sqlVariableForRefsLinkedTo ->
                                                 sqlComponent.toRecordDefinitionForRef();
                                     })
@@ -485,7 +489,7 @@ public class RelationalService implements ServiceContainerBean, InitializingBean
             return referenceDescription.getDynamicColumns().keySet().stream()
                     .map(IdentifierTest::new)
                     .map(labelTest -> labelTest.forDynamicReferenceHierachicakKey(count.getAndIncrement()))
-                    .collect(Collectors.toList());
+                    .toList();
         }*/
 
         @Deprecated
@@ -572,7 +576,7 @@ public class RelationalService implements ServiceContainerBean, InitializingBean
         }
 
         String toRecordDefinition() {
-            final String cast = sqlType().cast().contains("DATE")?"TEXT":sqlType().cast();
+            final String cast = sqlType().cast().contains("DATE") ? "TEXT" : sqlType().cast();
             return """
                     "%1$s" %2$s%3$s"""
                     .formatted(
